2008-11-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 561899 – GIMP can't save to mounted filesystem if file exists

	* plug-ins/file-uri/uri-backend-gvfs.c (copy_uri): pass the
	G_FILE_COPY_OVERWRITE flag to g_file_copy().

2008-11-21  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.6.4 (interface age 4).

2008-11-21  Sven Neumann  <sven@gimp.org>

	* Made 2.6.3 release.

2008-11-19  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 558454 – Plugin Map Color Range disappears from GIMP

	* plug-ins/script-fu/scripts/Makefile.am

	* plug-ins/script-fu/scripts/plug-in-compat.init: new file
	providing compatibility with plug-ins from older GIMP
	versions. Contains a reimplementation of plug-in-color-map based
	on ideas and code from Eric Lamarque.

	* plug-ins/script-fu/scheme-wrapper.c (tinyscheme_init): load the
	plug-in-compat.init file.

2008-11-18  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	Bug 559239 – Error while loading psd-data

	* plug-ins/file-psd/psd-layer-res-load.c (load_layer_resource):
	Layer resource data should not be padded.

2008-11-15  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell-scroll.[ch]: removed function
	gimp_display_shell_scroll_get_scaled_viewport_offset() as it was
	only returning -shell->offset_x and -shell->offset_y and it
	started to show up in profiles.

	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell-transform.c
	* app/display/gimpdisplayshell-scale.c: use the shell offsets
	directly.

2008-11-15  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	Bug 560903 – Explicit zooming with e.g. '1' should handle
	zoom-focus better

	* app/display/display-enums.h: Added
	GIMP_ZOOM_FOCUS_RETAIN_CENTERING_ELSE_BEST_GUESS.

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_get_zoom_focus): Take the new enum into
	account; if the image is centered, keep it centered, else use the